[tool.poetry]
name = "pathao_pay_challenge"
version = "0.1.0"
description = "Simple API to manage a small digital wallet."
authors = ["Mahir Labib Chowdhury <optical.mahir@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
