[tool.poetry]
name = "pathao_pay_challenge"
version = "0.1.0"
description = "Simple API to manage a small digital wallet."
authors = ["Mahir Labib Chowdhury <optical.mahir@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
SQLAlchemy = "^1.4.42"
psycopg2 = "^2.9.5"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
ipython = "^8.5.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
